# lethe

./: .gitignore  LICENSE  README.md  cards.yaml  oracle.yaml  pyproject.toml
.claude/: settings.local.json
deckDescriptions/: dali-oracle.yaml  deck-attributes-template.json  dreamers-garden.json  dreamers-garden.yaml  duat-oracle.json  earthsea-arcana-deck-attributes.json  earthsea-arcana.yaml  fillmore-arcana-deck-attributes.json  fillmore-arcana.yaml  frida-kahlo-oracle.json  frida-kahlo-oracle.yaml  oracle-deck-template.json  thresholds.json  wicker-arcana-deck-attributes.json  wicker-arcana.yaml
docs/plans/: 2026-02-27-sliding-crop-references-design.md  2026-02-27-sliding-crop-references.md  2026-02-28-oracle-deck-design.md  2026-02-28-oracle-deck.md  2026-03-08-custom-tarot-decks-design.md  2026-03-09-frida-kahlo-oracle-design.md  2026-03-09-frida-kahlo-oracle-implementation.md  2026-03-10-earthsea-arcana-design.md  2026-03-10-earthsea-arcana-implementation.md  2026-03-10-fillmore-arcana-design.md  2026-03-10-fillmore-arcana-implementation.md  2026-03-10-wicker-arcana-design.md  2026-03-10-wicker-arcana-implementation.md  2026-03-11-duat-oracle-design.md  2026-03-11-duat-oracle-implementation.md
tarot_gen/: __init__.py  __main__.py  cards.py  cli.py  consistency.py  generator.py  prompts.py
tests/: test_cards.py  test_consistency.py
